fix: Dependency, font color, and paragraph spacing

--- a/src/components/ErrorScreen.module.css
+++ b/src/components/ErrorScreen.module.css
@@ -15,7 +15,7 @@
     width: auto;
 }
 
-p {
+.pg {
     color: #ffffff;
     font-family: Courier New;
 }
