--- a/src/components/LoadingScreen.module.css
+++ b/src/components/LoadingScreen.module.css
@@ -15,7 +15,7 @@
     width: auto;
 }
 
-p {
+.pg {
     font-family: Courier New;
 }
 
